--- a/pom.xml
+++ b/pom.xml
@@ -69,9 +69,14 @@
             <artifactId>spring-data-r2dbc</artifactId>
             <version>1.0.0.RELEASE</version>
         </dependency>
-
-
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-hateoas</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-rest-hal-explorer</artifactId>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
